# py-compressed-kde

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  bitbucket-pipelines.yml
docs/: Makefile  environment.yml  requirements.txt
docs/source/: conf.py  content_table.rst  index.rst  installation.rst  learn_by_example.rst  py_decode.rst  reference.rst
docs/source/_static/: custom.css
docs/source/decoding/: compressed_density_decoding.ipynb  compressed_density_decoding_1.ipynb  kde_tuning_decoding.ipynb
pybind/: pybind.cpp  pybind.hpp  pybind_component.cpp  pybind_decoder.cpp  pybind_grid.cpp  pybind_kernel.cpp  pybind_likelihood.cpp  pybind_mixture.cpp  pybind_space.cpp  pybind_stimulus.cpp
python/: _version.py  setup.py
python/compressed_kde/: __init__.py
python/compressed_kde/decode/: __init__.py
python/fklab/decode/: __init__.py
python/recipe/: build.sh  conda_build_config.yaml  meta.yaml
src/: common.cpp  common.hpp  component.cpp  component.hpp  decoder.cpp  decoder.hpp  grid.cpp  grid.hpp  grid_array.cpp  grid_array.hpp  grid_base.cpp  grid_base.hpp  grid_multi.cpp  grid_multi.hpp  grid_vector.cpp  grid_vector.hpp  kernel.cpp  kernel.hpp  kernel_base.cpp  kernel_base.hpp  kernel_box.cpp  kernel_box.hpp  kernel_epanechnikov.cpp  kernel_epanechnikov.hpp  kernel_gaussian.cpp  kernel_gaussian.hpp  kernel_vonmises.cpp  kernel_vonmises.hpp  likelihood.cpp  likelihood.hpp  mixture.cpp  mixture.hpp  schema.fbs  space.cpp  space.hpp  space_base.cpp  space_base.hpp  space_categorical.cpp  space_categorical.hpp  space_circular.cpp  (+11 more)
